@@ -18,7 +18,7 @@
 # Copyright (c) 2003 Pat Thoyts
 #
 #-------------------------------------------------------------------------
-# RCS: @(#)$Id: makefile.vc,v 1.4 2005/05/19 23:38:23 patthoyts Exp $
+# RCS: @(#)$Id: makefile.vc,v 1.5 2005/11/27 21:32:01 patthoyts Exp $
 #-------------------------------------------------------------------------
 
 !if !defined(MSDEVDIR) && !defined(MSVCDIR) && !defined(VCToolkitInstallDir)
@@ -156,7 +156,7 @@ Please `cd` to its location first.
 PROJECT = udp
 !include "rules.vc"
 
-DOTVERSION      = 1.0.7
+DOTVERSION      = 1.0.8
 VERSION         = $(DOTVERSION:.=)
 STUBPREFIX      = $(PROJECT)stub
 
